tests/baselines/reference/interfaceInReopenedModule(strict=true).errors.txt
interfaceInReopenedModule.ts(8,17): error TS2564: Property 'n' has no initializer and is not definitely assigned in the constructor.


==== interfaceInReopenedModule.ts (1 errors) ====
    module m {
    }
    
    // In second instance of same module, exported interface is not visible
    module m {
        interface f {}
        export class n { 
            private n: f;
                    ~
!!! error TS2564: Property 'n' has no initializer and is not definitely assigned in the constructor.
        }
    }
    